...
                                <rect key="frame" x="16" y="53" width="343" height="216"/>
                                <accessibility key="accessibilityConfiguration" identifier="numberPicker"/>
                            </pickerView>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oos-T1-5F3">
                                <rect key="frame" x="145" y="338" width="85" height="62"/>
                                <color key="backgroundColor" red="0.20401176810264587" green="0.46907550096511841" blue="0.96479135751724243" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="haettiButton" label="Hätti?"/>
                                <rect key="contentStretch" x="1" y="1" width="1" height="1"/>
                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                <state key="normal" title="Hätti?">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                                <action selector="goBack:" destination="iaU-kd-955" id="5hW-Vw-Tfw"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
                            </navigationBar>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Du hast folgende Zahlen gezogen" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yC2-1c-gLS">
                                <rect key="frame" x="58" y="162" width="258" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="winText"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
...
                                                <action selector="back:" destination="CyX-1p-xUh" id="YHY-q8-xaw"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
                            </navigationBar>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Leider verloren :(" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q7H-fs-AAM">
                                <rect key="frame" x="122" y="323" width="130" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
...
